tests/snapshots/cmd_generate__matrix_strategy.snap
---
source: tests/cmd_generate.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Test", {
      runs_on: "ubuntu-latest",
      strategy: matrix({
        os: ["ubuntu-latest", "macos-latest"],
        node: ["18", "20"],
      }),
      steps(ctx) {
        run(`echo ${ctx.matrix.os} ${ctx.matrix.node}`)
      }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    strategy:
      matrix:
        node:
        - '18'
        - '20'
        os:
        - ubuntu-latest
        - macos-latest
    steps:
    - id: step_0
      run: echo ${{ matrix.os }} ${{ matrix.node }}
