tests/snapshots/cmd_generate__multi_file_import.snap
---
source: tests/cmd_generate.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/_utils.ts ---
export function cargo_test(): void {
  run("cargo test --all-features")
}
--- .github/ghat/workflows/ci.ts ---
import { cargo_test } from "./_utils.ts"

workflow("CI", {
  on: triggers({ push: ["main"], pull_request: ["main"] }),
  jobs(ctx) {
    ctx.job("Test", {
      runs_on: "ubuntu-latest",
      steps() {
        cargo_test()
      }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
  pull_request:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo test --all-features
