tests/snapshots/cmd_generate__multiple_workflows_one_file.snap
---
source: tests/cmd_generate.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_build.yaml
       Wrote .github/workflows/generated_test.yaml
    Finished generated 2 workflows in [TIME]
--- .github/ghat/workflows/multi.ts ---
workflow("Build", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps() { run("cargo build") }
    })
  }
})

workflow("Test", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Test", {
      runs_on: "ubuntu-latest",
      steps() { run("cargo test") }
    })
  }
})
--- .github/workflows/generated_build.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Build
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo build
--- .github/workflows/generated_test.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Test
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo test
