tests/snapshots/cmd_generate__no_workflows_dir.snap
---
source: tests/cmd_generate.rs
expression: output
---
exit_code: 1
---stderr---
Error: 
  x workflows directory not found: .github/ghat/workflows
