tests/snapshots/cmd_generate__run_name_rejects_strategy.snap
---
source: tests/cmd_generate.rs
expression: output
---
exit_code: 1
---stderr---
  Evaluating workflow definitions
Error: 
  x context 'strategy' is not available in 'run_name' (available: github, inputs, vars)
  | 
  | Stack trace:
  |     at get (eval_script:43:96)
  |     at run_name (.github/ghat/workflows/bad.ts:3:1)
  |     at resolve_value (eval_script:63:41)
  |     at workflow (eval_script:432:35)
  |     at <anonymous> (.github/ghat/workflows/bad.ts:2:7)
  |
