tests/snapshots/cmd_generate__step_output_through_workflow_call.snap
---
source: tests/cmd_generate.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_build.yaml
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 2 workflows in [TIME]
--- .github/ghat/workflows/build.ts ---
const build = workflow("Build", {
  on: triggers({
    workflow_call: {
      inputs: {
        save_cache: input("boolean", {
          required: false,
          default: false,
        }),
      },
      outputs: {
        artifact_path: { description: "Path to the built artifact" },
      },
    },
  }),
  jobs(ctx) {
    const build = ctx.job("Compile", {
      runs_on: "ubuntu-latest",
      steps(ctx) {
        const build = run(`cargo build --release --cache ${ctx.inputs.save_cache}`)
        return { artifact_path: build.outputs.path }
      }
    })
    return { artifact_path: build.outputs.artifact_path }
  }
})

workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    const b = ctx.uses("Run Build", build, {
      with: { save_cache: true }
    })

    ctx.job("Deploy", {
      runs_on: "ubuntu-latest",
      needs: [b],
      steps(ctx) {
        run(`echo deploying ${ctx.needs.run_build.outputs.artifact_path}`)
      }
    })
  }
})
--- .github/workflows/generated_build.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Build
on:
  workflow_call:
    inputs:
      save_cache:
        type: boolean
        required: false
        default: 'false'
    outputs:
      artifact_path:
        description: Path to the built artifact
        value: ${{ jobs.compile.outputs.artifact_path }}
jobs:
  compile:
    name: Compile
    runs-on: ubuntu-latest
    outputs:
      artifact_path: ${{ steps.step_0.outputs.path }}
    steps:
    - id: step_0
      run: cargo build --release --cache ${{ inputs.save_cache }}
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  run_build:
    name: Run Build
    uses: ./.github/workflows/generated_build.yaml
    with:
      save_cache: true
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    needs:
    - run_build
    steps:
    - id: step_0
      run: echo deploying ${{ needs.run_build.outputs.artifact_path }}
