tests/snapshots/cmd_generate__syntax_error.snap
---
source: tests/cmd_generate.rs
expression: output
---
exit_code: 1
---stderr---
Error: 
  x expecting ';'
  | 
  | Stack trace:
  |     at .github/ghat/workflows/bad.ts:7:7
  |
