tests/snapshots/cmd_generate__ts_workflow_with_type_annotations.snap
---
source: tests/cmd_generate.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
       Wrote .github/workflows/ghat_check.yaml
    Finished generated 2 workflows in [TIME]
--- .github/ghat/workflows/ci.ts ---
function echo(v: string) {
  run(`echo ${v}`)
}

workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Test", {
      runs_on: "ubuntu-latest",
      steps() {
        echo("hello")
      }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo hello
--- .github/workflows/ghat_check.yaml ---
[326 bytes]
